syntax = "proto3";

option go_package = "https://github.com/salvatore-081/salvatoreemilio.it/tree/development/api/internal/proto";

package internal;

message GetUserInput {
    string email = 1;
}

message User {
    string email = 1;
    string name = 2;
    string surname = 3;
    string phoneNumber = 4;
    string currentLocation = 5;
}

message AddUserInput {
    string email = 1;
    string name = 2;
    string surname = 3;
    string phoneNumber = 4;
    string currentLocation = 5;
}

message UpdateUserInputSet {
    string name = 1;
    string surname = 2;
    string phoneNumber = 3;
    string currentLocation = 4;
}

message UpdateUserInput {
    string email = 1;
    UpdateUserInputSet set = 2;
}

message WatchUserInput {
    string email = 1;
}

service Internal {
    rpc GetUser (GetUserInput) returns (User) {}
    rpc AddUser (AddUserInput) returns (User) {}
    rpc UpdateUser (UpdateUserInput) returns (User) {}
    rpc WatchUser (WatchUserInput) returns (stream User) {}
}