syntax = "proto3";

option go_package = "https://github.com/salvatore-081/salvatoreemilio.it/tree/development/api/internal/proto";

package internal;

message GetUserInput {
    string email = 1;
}

message User {
    string email = 1;
    string name = 2;
    string surname = 3;
    string phoneNumber = 4;
    string location = 5;
    bytes profilePicture = 6;
}

message GetUserListInput {}

message UserListItem {
    string email = 1;
    string name = 2;
    string surname = 3;
    bytes profilePicture = 4;
}

message GetUserListOutput {
    repeated UserListItem userList = 1;
}

message AddUserInput {
    string email = 1;
    string name = 2;
    string surname = 3;
    string phoneNumber = 4;
    string location = 5;
    bytes profilePicture = 6;
}

message UpdateUserInputPayload {
    string name = 1;
    string surname = 2;
    string phoneNumber = 3;
    string location = 4;
    bytes profilePicture = 6;
}

message UpdateUserInput {
    string email = 1;
    UpdateUserInputPayload updateUserInputPayload = 2;
}

message WatchUserInput {
    string email = 1;
}

service Internal {
    rpc GetUser (GetUserInput) returns (User) {}
    rpc GetUserList (GetUserListInput) returns (GetUserListOutput) {}
    rpc AddUser (AddUserInput) returns (User) {}
    rpc UpdateUser (UpdateUserInput) returns (User) {}
    rpc WatchUser (WatchUserInput) returns (stream User) {}
}